--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -15,7 +15,7 @@
 		<div class="col-sm-8">
 			<select name="uom_purchase" class="custom-select custom-select-sm" id="uom_purchase">
 				{% for uom in m_costing.get_uom_purchases() %}
-					<option value="{{ uom.code }}" {{ uom.code == item.unitofmpurchase.code ? 'selected' : '' }}>
+					<option value="{{ uom.code }}" data-conversion="{{ uom.conversion }}" {{ uom.code == item.unitofmpurchase.code ? 'selected' : '' }}>
 						{{ uom.code }} - {{ uom.description }}
 					</option>
 				{% endfor %}
@@ -42,7 +42,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-8">
-					<div class="input-group input-group-sm">
+					<div class="input-group input-group-sm" id="standardcost-each">
 						<input type="text" class="form-control text-right" value="{{ item.standardcost|number_format(m_costing.configs.po.decimal_places_cost) }}" readonly>
 						<div class="input-group-append">
 							<span class="input-group-text text-monospace">EACH</span>
