Add Configs, update standard cost each, use preciesion

--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -42,7 +42,7 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-8">
-					<div class="input-group input-group-sm" id="standardcost-each">
+					<div class="input-group input-group-sm collapse" id="standardcost-each">
 						<input type="text" class="form-control text-right" value="{{ item.standardcost|number_format(m_costing.configs.po.decimal_places_cost) }}" readonly>
 						<div class="input-group-append">
 							<span class="input-group-text text-monospace">EACH</span>
