--- a/site/templates/twig/items/itm/costing/js/classes.js.twig
+++ b/site/templates/twig/items/itm/costing/js/classes.js.twig
@@ -1,3 +1,4 @@
+{% include 'items/itm/costing/js/classes/Configs.js.twig' %}
 {% include 'items/itm/costing/js/classes/Inputs.js.twig' %}
 {% include 'items/itm/costing/js/classes/Alerts.js.twig' %}
 {% include 'items/itm/costing/js/classes/Form.js.twig' %}
