--- a/site/templates/twig/items/itm/costing/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/costing/js/classes/Form.js.twig
@@ -11,12 +11,41 @@ class CostingForm {
 	constructor() {
 		this.id = 'item-costing-form';
 		this.form = $('#' + this.id);
-		this.inputs = CostingInputs.getInstance();
+		this.inputs  = CostingInputs.getInstance();
+		this.config  = CostingConfigs.getInstance();
 	}
 
 	updateUomPurchase() {
-		this.form.find('.uom-purchase-display').text(this.inputs.uom.val());
+		this.updateUomPurchaseDisplay();
+		this.showHideStandardCostEach();
 		this.updateStandardCostEach();
+	}
+
+	updateUomPurchaseDisplay() {
+		var uom    = this.inputs.uom.val();
+		var length = this.config.fields.uom.maxlength;
+		var nbrOfSpaces = length - uom.length;
+
+		if (nbrOfSpaces < 1) {
+			this.form.find('.uom-purchase-display').text(this.inputs.uom.val());
+			return true;
+		}
+		var spaces = '';
+		for (var i = 1; i < nbrOfSpaces + 1; i++) {
+			spaces += '&nbsp;';
+		}
+		this.form.find('.uom-purchase-display').html(uom + spaces);
+	}
+
+	showHideStandardCostEach() {
+		var display = this.form.find('#standardcost-each');
+
+		if (this.inputs.uom.val() != 'EACH') {
+			display.addClass('show');
+		}
+		if (this.inputs.uom.val() == 'EACH') {
+			display.removeClass('show');
+		}
 	}
 
 	updateStandardCostEach() {
@@ -24,6 +53,6 @@ class CostingForm {
 		var standardcostUom = parseFloat(this.inputs.standardcost.val());
 		var costEach = standardcostUom / conversion;
 		var div = this.form.find('#standardcost-each');
-		div.find('input').val(costEach);
+		div.find('input').val(costEach.toFixed(this.config.fields.cost.precision));
 	}
 }
