--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -37,12 +37,12 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<p class="form-control-plaintext">{{ item.date_laststandardcost ? item.date_laststandardcost|convertdate : '' }}</p>
+					<p class="form-control-plaintext form-control-sm">{{ item.date_laststandardcost ? item.date_laststandardcost|convertdate : '' }}</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-8">
-					<div class="input-group input-group-sm collapse" id="standardcost-each">
+					<div class="input-group input-group-sm collapse {{ item.unitofmpurchase.code != 'EACH' ? 'show' : '' }}" id="standardcost-each">
 						<input type="text" class="form-control text-right" value="{{ item.standardcost|number_format(m_costing.configs.po.decimal_places_cost) }}" readonly>
 						<div class="input-group-append">
 							<span class="input-group-text text-monospace">EACH</span>
@@ -72,7 +72,7 @@
 			<label for="lastcost">Last Cost</label>
 		</div>
 		<div class="col-sm-8">
-			<div class="row">
+			<div class="row mb-2">
 				<div class="col-sm-8">
 					<div class="input-group input-group-sm">
 						<input type="text" class="form-control text-right" name="lastcost" id="lastcost" value="{{ item.lastcost|number_format(m_costing.configs.po.decimal_places_cost) }}" readonly>
@@ -85,6 +85,18 @@
 					<p class="form-control-plaintext">{{ item.date_lastcost ? item.date_lastcost|convertdate : '' }}</p>
 				</div>
 			</div>
+			{% if item.unitofmpurchase.code != 'EACH' %}
+				<div class="row">
+					<div class="col-sm-8">
+						<div class="input-group input-group-sm">
+							<input type="text" class="form-control text-right" value="{{ (item.lastcost / item.unitofmpurchase.conversion)|number_format(m_costing.configs.po.decimal_places_cost) }}" readonly>
+							<div class="input-group-append">
+								<span class="input-group-text text-monospace">EACH</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			{% endif %}
 		</div>
 	</div>
 	<div class="form-group row">
