--- a/site/templates/twig/util/bootstrap/form/input-group.twig
+++ b/site/templates/twig/util/bootstrap/form/input-group.twig
@@ -1,5 +1,5 @@
 {% set group = twiginputgroup(inputgroup) %}
-<div class="{{ group.class() }}">
+<div class="{{ group.class() }}" {{ group.attributes()|raw }}>
 	{% if group.type == 'prepend' %}
 		<span class="input-group-prepend">
 			{% if inputgroup.button %}
