REFACTOR: move cost-fields to their own twig file

--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -22,138 +22,9 @@
 			</select>
 		</div>
 	</div>
-	<div class="form-group row">
-		<div class="col-sm-4">
-			<label for="standardcost">Standard Cost</label>
-		</div>
-		<div class="col-sm-8">
-			<div class="row mb-2">
-				<div class="col-sm-8">
-					{% include 'util/bootstrap/form/input-group.twig' with {
-							'inputgroup': {
-								'type': 'append',
-								'size': 'sm',
-								'input': {
-									'type': 'number',
-									'name': 'standardcost',
-									'value': (item.standardcost * item.unitofmpurchase.conversion)|number_format(m_costing.getConfigPo().decimal_places_cost),
-									'addclasses': ['text-right']
-								},
-								'span': {
-									'text': item.unitofmpurchase.code|spacepad(m_costing.getUomCodeLength())|raw,
-									'addclasses': ['text-monospace', 'uom-purchase-display']
-								}
-							}
-						}
-					%}
-				</div>
-				<div class="col-sm-4">
-					<p class="form-control-plaintext form-control-sm">{{ item.date_laststandardcost ? item.date_laststandardcost|convertdate : '' }}</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-8">
-					{% include 'util/bootstrap/form/input-group.twig' with {
-							'inputgroup': {
-								'type': 'append',
-								'size': 'sm',
-								'addclasses': [
-									'collapse',
-									item.unitofmpurchase.code != 'EACH' ? 'show' : ''
-								],
-								'attributes': {
-									'id': 'standardcost-each',
-									'readonly': true
-								},
-								'input': {
-									'value': item.standardcost|number_format(m_costing.configs.po.decimal_places_cost),
-									'addclasses': ['text-right']
-								},
-								'span': {
-									'text': 'EACH',
-									'addclasses': ['text-monospace']
-								}
-							}
-						}
-					%}
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="form-group row">
-		<div class="col-sm-4">
-			<label for="standardcostbasedon">Based On</label>
-		</div>
-		<div class="col-sm-8">
-			<div class="row">
-				<div class="col-sm-8">
-					{% include 'util/form/select.twig' with {
-							'name':          'standardcostbasedon',
-							'id':            'standardcostbasedon',
-							'selected_value': item.standardcostbasedon,
-							'options':       m_costing.get_standardcost_basedon_options(),
-							'show_value': true,
-						}
-					%}
-				</div>
-			</div>
 
-		</div>
-	</div>
-	<div class="form-group row">
-		<div class="col-sm-4">
-			<label for="lastcost">Last Cost</label>
-		</div>
-		<div class="col-sm-8">
-			<div class="row mb-2">
-				<div class="col-sm-8">
-					{% include 'util/bootstrap/form/input-group.twig' with {
-							'inputgroup': {
-								'type': 'append',
-								'size': 'sm',
-								'attributes': {'readonly': true},
-								'input': {
-									'name': 'lastcost',
-									'value': item.lastcost|number_format(m_costing.configs.po.decimal_places_cost),
-									'addclasses': ['text-right']
-								},
-								'span': {
-									'text': item.unitofmpurchase.code|spacepad(m_costing.getUomCodeLength())|raw,
-									'addclasses': ['text-monospace', 'uom-purchase-display']
-								}
-							}
-						}
-					%}
-				</div>
-				<div class="col-sm-4">
-					<p class="form-control-plaintext">{{ item.date_lastcost ? item.date_lastcost|convertdate : '' }}</p>
-				</div>
-			</div>
-			{% if item.unitofmpurchase.code != 'EACH' %}
-				<div class="row">
-					<div class="col-sm-8">
-						{% include 'util/bootstrap/form/input-group.twig' with {
-								'inputgroup': {
-									'type': 'append',
-									'size': 'sm',
-									'attributes': {'readonly': true},
-									'input': {
-										'name': 'lastcosteach',
-										'value': (item.lastcost / item.unitofmpurchase.conversion)|number_format(m_costing.configs.po.decimal_places_cost),
-										'addclasses': ['text-right']
-									},
-									'span': {
-										'text': 'EACH',
-										'addclasses': ['text-monospace']
-									}
-								}
-							}
-						%}
-					</div>
-				</div>
-			{% endif %}
-		</div>
-	</div>
+	{% include 'items/itm/costing/form/cost-fields.twig' %}
+	
 	<div class="form-group row">
 		<div class="col-sm-4">
 			<label for="buyer">{{ m_costing.is_buyercontrol_item() ? 'Buyer' : 'N/A'}}</label>
