--- a/site/templates/twig/items/itm/pricing/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes/Form.js.twig
@@ -12,6 +12,6 @@ class PricingForm {
 		this.id = 'itm-pricing-form';
 		this.form = $('#' + this.id);
 		this.inputs = PricingInputs.getInstance();
-	//	this.config = PricingConfig.getInstance();
+		this.config = PricingConfigs.getInstance();
 	}
 }
