--- a/site/templates/twig/items/itm/costing/form.twig
+++ b/site/templates/twig/items/itm/costing/form.twig
@@ -6,8 +6,10 @@
 	m_costing              module ItmCosting
 	itm                    module Itm
 #}
-<form action="{{ input.url() }}" class="mb-3" id="item-costing-form" method="post">
+<form action="{{ input.url() }}" class="mb-3" id="item-costing-form" method="POST">
+	<input type="hidden" name="action" value="update-itm-costing">
 	<input type="hidden" name="itemID" value="{{ item.itemid }}">
+
 	<div class="form-group row">
 		<div class="col-sm-4">
 			<label for="uom_purchase">Purchase UoM</label>
@@ -24,7 +26,7 @@
 	</div>
 
 	{% include 'items/itm/costing/form/cost-fields.twig' %}
-	
+
 	<div class="form-group row">
 		<div class="col-sm-4">
 			<label for="buyer">{{ m_costing.is_buyercontrol_item() ? 'Buyer' : 'N/A'}}</label>
@@ -86,7 +88,7 @@
 			1. Locked for editing by the User
 		#}
 		{% if itm.recordlocker.userHasLocked(item.itemid) %}
-			<button type="submit" class="btn btn-success" name="action" value="update-itm-costing">
+			<button type="submit" class="btn btn-success">
 				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 			</button>
 		{% endif %}
