FEAT: show inputs readonly, use decimal precision

--- a/site/templates/twig/items/itm/pricing/form/sales/qty-breaks/tr.twig
+++ b/site/templates/twig/items/itm/pricing/form/sales/qty-breaks/tr.twig
@@ -7,16 +7,29 @@
 	pricingm               module ItmPricing
 	pricingm.configs       WireData
 #}
-<tr class="unit-row">
+{% set unit = {
+		'qty': item_pricing.get_pricebreak_qty(i),
+		'price': item_pricing.get_pricebreak_price(i),
+		'margin': item_pricing.get_pricebreak_margin(i),
+	}
+%}
+{% set formatted = {
+		'qty': unit.qty|number_format(pricingm.fieldAttribute('qty', 'precision')),
+		'price': unit.price|number_format(pricingm.fieldAttribute('margin', 'precision')),
+		'margin': unit.margin|number_format(pricingm.fieldAttribute('margin', 'precision')),
+	}
+%}
+<tr class="unit-row" data-break="{{ i }}">
 	<td>
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
 					'name': 'pricebreak_qty' ~ i,
-					'value': item_pricing.get_pricebreak_qty(i),
+					'value': unit.qty != 0 ? formatted.qty : '',
 					'size': 'sm',
 					'attributes': {
 						'placeholder': '',
 						'aria-label':  'price break qty ' ~ i,
+						'readonly': item_pricing.get_pricebreak_qty(i - 1) == 0 and i > 1 ? true : false
 					},
 					'addclasses': ['text-right', 'unit-qty']
 				}
@@ -27,11 +40,12 @@
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
 					'name': 'pricebreak_price' ~ i,
-					'value': item_pricing.get_pricebreak_price(i),
+					'value': unit.qty != 0 ? formatted.price : '',
 					'size': 'sm',
 					'attributes': {
 						'placeholder': '',
 						'aria-label':  'price break price ' ~ i,
+						'readonly': unit.qty == 0 ? true : false
 					},
 					'addclasses': ['text-right', 'unit-price']
 				}
@@ -39,6 +53,6 @@
 		%}
 	</td>
 	<td class="text-right">
-		<span class="unit-margin text-right">{{ item_pricing.get_pricebreak_margin(i)|number_format(4) }}</span> %
+		<span class="unit-margin text-right">{{ unit.qty != 0 ? formatted.margin : '' }}</span> %
 	</td>
 </tr>
