Create and use UnitRow JS Class

--- a/site/templates/twig/items/itm/pricing/js/classes.js.twig
+++ b/site/templates/twig/items/itm/pricing/js/classes.js.twig
@@ -1,4 +1,5 @@
 {% include 'items/itm/pricing/js/classes/Configs.js.twig' %}
+{% include 'items/itm/pricing/js/classes/UnitRow.js.twig' %}
 {% include 'items/itm/pricing/js/classes/Calculator.js.twig' %}
 {% include 'items/itm/pricing/js/classes/Inputs.js.twig' %}
 {% include 'items/itm/pricing/js/classes/Form.js.twig' %}
