FIX: use js for faster toggle-collapse, collpase lotserial

--- a/site/templates/twig/customers/ci/sales-history/sales-history.twig
+++ b/site/templates/twig/customers/ci/sales-history/sales-history.twig
@@ -12,7 +12,7 @@
 				</h4>
 			</div>
 			<div class="col-sm-6">
-				<button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#{{ index|attrJS }} .lotserial" aria-expanded="false" aria-controls="#{{ index|attrJS }} .lotserial">
+				<button class="btn btn-outline-primary toggle-collapse" type="button" data-target="#{{ index|attrJS }} .lotserial" aria-expanded="false" aria-controls="#{{ index|attrJS }} .lotserial">
 					Show / Hide Lot/Serials
 				</button>
 			</div>
